finish 50%  slider, wait for updating ...

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Clone [w3_musicband]</title>
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="stylesheet" href="./assets/css/header.css" />
+    <link rel="stylesheet" href="./assets/css/slider.css" />
     <link
       rel="stylesheet"
       href="./assets/fonts/themify-icons-font/themify-icons.css"
@@ -36,7 +37,12 @@
           <i class="ti-search"></i>
         </div>
       </div>
-      <div id="slider"></div>
+      <div id="slider">
+        <div class="text-section text-white">
+          <h3 class="text-heading">New York</h3>
+          <p class="text-desc">The atmosphere in New York is lorem ipsum.</p>
+        </div>
+      </div>
       <div id="content"></div>
       <div id="footer"></div>
     </div>
