--- a/index.html
+++ b/index.html
@@ -43,7 +43,70 @@
           <p class="text-desc">The atmosphere in New York is lorem ipsum.</p>
         </div>
       </div>
-      <div id="content"></div>
+      <div id="content">
+        <div class="content-section">
+          <h2 class="content-heading text-center">THE BAND</h2>
+          <p class="content-sub-heading text-center">We love music</p>
+          <p class="content-desc">
+            We have created a fictional band website. Lorem ipsum dolor sit
+            amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat.
+          </p>
+
+          <div class="member-list">
+            <div class="member-item">
+              <p class="member-name">Name</p>
+              <img
+                class="member-img"
+                src="./assets/imgs/member/bandmember.jpg"
+                alt="Member name"
+              />
+            </div>
+
+            <div class="member-item">
+              <p class="member-name">Name</p>
+              <img
+                class="member-img"
+                src="./assets/imgs/member/bandmember.jpg"
+                alt="Member name"
+              />
+            </div>
+
+            <div class="member-item">
+              <p class="member-name text-center">Name</p>
+              <img
+                class="member-img"
+                src="./assets/imgs/member/bandmember.jpg"
+                alt="Member name"
+              />
+            </div>
+
+            <div class="clear"></div>
+          </div>
+        </div>
+
+        <div class="tour-section">
+          <div class="content-section">
+            <h2 class="content-heading text-center text-white">TOUR DATES</h2>
+            <p class="content-sub-heading text-center text-white">
+              Remember to book your tickets!
+            </p>
+          </div>
+        </div>
+
+        <div class="content-section">
+          <h2 class="content-heading text-center">CONTACT</h2>
+          <p class="content-sub-heading text-center">Fan? Drop a note!</p>
+        </div>
+      </div>
       <div id="footer"></div>
     </div>
   </body>
