clear 1/2 tour tickets, con thieu script cua button [Buy Tickets]

--- a/index.html
+++ b/index.html
@@ -93,12 +93,72 @@
           </div>
         </div>
 
+        <!-- break -->
         <div class="tour-section">
           <div class="content-section">
             <h2 class="content-heading text-center text-white">TOUR DATES</h2>
             <p class="content-sub-heading text-center text-white">
               Remember to book your tickets!
             </p>
+
+            <!-- Tickets -->
+            <ul class="tickets-booking">
+              <li>September <span class="sold-out">Sold out</span></li>
+              <li>October <span class="sold-out">Sold out</span></li>
+              <li>November <span class="quantity">3</span></li>
+            </ul>
+
+            <div class="places-list">
+              <div class="place-item">
+                <img
+                  src="./assets/imgs/places/place1.jpg"
+                  alt="New York"
+                  class="place-img"
+                />
+
+                <div class="place-infor">
+                  <p class="place-name">New York</p>
+                  <p class="place-time">Fri 27 Nov 2016</p>
+                  <p class="place-desc">
+                    Praesent tincidunt sed tellus ut rutrum sed vitae justo.
+                  </p>
+                  <button class="place-buy-button">Buy Tickets</button>
+                </div>
+              </div>
+              <div class="place-item">
+                <img
+                  src="./assets/imgs/places/place2.jpg"
+                  alt="Paris"
+                  class="place-img"
+                />
+
+                <div class="place-infor">
+                  <p class="place-name">Paris</p>
+                  <p class="place-time">Sat 28 Nov 2016</p>
+                  <p class="place-desc">
+                    Praesent tincidunt sed tellus ut rutrum sed vitae justo.
+                  </p>
+                  <button class="place-buy-button">Buy Tickets</button>
+                </div>
+              </div>
+              <div class="place-item">
+                <img
+                  src="./assets/imgs/places/place3.jpg"
+                  alt="San Francisco"
+                  class="place-img"
+                />
+
+                <div class="place-infor">
+                  <p class="place-name">San Francisco</p>
+                  <p class="place-time">Sun 29 Nov 2016</p>
+                  <p class="place-desc">
+                    Praesent tincidunt sed tellus ut rutrum sed vitae justo.
+                  </p>
+                  <button class="place-buy-button">Buy Tickets</button>
+                </div>
+              </div>
+              <div class="clear"></div>
+            </div>
           </div>
         </div>
 
