--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                   <p class="place-name">San Francisco</p>
                   <p class="place-time">Sun 29 Nov 2016</p>
                   <p class="place-desc">
-                    Praesent tincidunt sed tellus ut rutrum sed vitae justo.
+                    Praesent tincidunt sed tellus ut rutrum sed vitae justo. ^^
                   </p>
                   <button class="place-buy-button">Buy Tickets</button>
                 </div>
@@ -168,6 +168,8 @@
         </div>
       </div>
       <div id="footer"></div>
+
+      <div class="modal-win"></div>
     </div>
   </body>
 </html>
